# nixcpp

./: Dockerfile  run.sh
Code/: Cookies  Preferences  machineid  storage.json
Code/Backups/: workspaces.json
Code/Cache/: data_0  data_1  data_2  index
Code/CachedData/5f24c93878bd4bc645a4a17c620e2487b11005f9/: AvailabilityData-48ed174457ab84bbd230696212d7267a.code  Base-894701a398f9838facd17ffa5b1872e2.code  Channel-567d03773482c99bbd81bcb815e36483.code  Config-abb0162f3de9fd98531584846db20150.code  Console-a01e8dc3315af538c5af78842078d76d.code  Constants-145eca903580ac90e33a36d2a5e1e943.code  Context-722a55a68149557af14bcd3fa0d5088c.code  ContextTagKeys-4cbbd08596f4c252ccbf92a6672d78d6.code  CorrelationContextManager-ffc1e70cfe33407ff0b7bfb82499d0b9.code  CorrelationIdManager-1169ca830aa5fb96e4db2469b61291a4.code  Data-a0e3e710bf536c3568016aaba0948795.code  DataPoint-5a72fba5c8ff59e4262e0afb2f6ede03.code  DataPointType-db518c601a0d26a19601502ea863bfa0.code  Domain-012ee705df7ef2f49240685a40eda2d9.code  Envelope-28bb2301db740ed792f7c8aa32567ad2.code  EnvelopeFactory-05686cf7d0d292530e3d6c30f7532af7.code  EventData-d43d165b0b0796647211a1fdfb452622.code  ExceptionData-9dc20c686879bd9ef7800cd1abaa7af4.code  ExceptionDetails-f3d86e7f72247b1bf50e15e3c258175d.code  Exceptions-011fc772d70f9b76f30d2f3dd9cc78e8.code  (+83 more)
Code/CachedExtensions/: builtin  user
Code/GPUCache/: index
Code/Local Storage/: file__0.localstorage
Code/User/: settings.json
project/: CMakeCache.txt  CMakeLists.txt  Makefile  Project  cmake_install.cmake  default.nix  main.cpp
(+119 files in other folders)
